# thermal_rs

./: Cargo.toml  README.md  new_world.yml  sim_world.yaml  simple_world.yml
src/: lib.rs  material.rs  simulate.rs  simulation.rs  volume.rs  world.rs
src/runner/: cpu.rs  mod.rs  threaded.rs
